Closed Bug 486578 Opened 15 years ago Closed 15 years ago

TM: "Assertion failure: scope->object == pobj" with function, __proto__, length

Categories

(Core :: JavaScript Engine, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9.2a1

People

(Reporter: jruderman, Assigned: Waldo)

References

Details

(4 keywords, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

var o = function(){};
  o.__proto__ = [];
  for (var j = 0; j < 3; ++j)
    o.length;

Assertion failure: scope->object == pobj, at ../jsinterp.cpp:144

Tested on mozilla-central.
Happens on tracemonkey branch too.
Assignee: general → jwalden+bmo
Status: NEW → ASSIGNED
Flags: blocking1.9.1?
autoBisect shows this is probably related to bug 469347 or http://hg.mozilla.org/tracemonkey/rev/b3b8454e003d :

The first bad revision is:
changeset:   26156:b3b8454e003d
user:        Jeff Walden
date:        Tue Mar 17 20:19:57 2009 -0700
summary:     Bug 469347 - TM: obj.length and slowArray.length don't trace.  r=gal
Blocks: 469347
Keywords: regression
This seems to be the most minimal fix for the problem; we can handle numeric properties of arrays on the prototype chain, so not entirely sure why length would be different, but clearly it is, and it's not worth optimizing apparently-specifically for that case.
Attachment #371009 - Flags: review?(gal)
Attachment #371009 - Flags: review?(gal) → review+
http://hg.mozilla.org/tracemonkey/rev/3030cb328d59

Still looking for a rightful blocking+...
Whiteboard: fixed-in-tracemonkey
Priority: -- → P2
Flags: blocking1.9.1? → blocking1.9.1+
http://hg.mozilla.org/mozilla-central/rev/3030cb328d59
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
Verified fixed with testcase given in comment 0 on trunk and 1.9.1 with the
following debug builds:

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre)
Gecko/20090422 Minefield/3.6a1pre ID:20090422224452

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b4pre)
Gecko/20090422 Shiretoko/3.5b4pre ID:20090422122043
Status: RESOLVED → VERIFIED
OS: Mac OS X → All
Hardware: x86 → All
Target Milestone: --- → mozilla1.9.2a1
cvsroot/mozilla/js/tests/js1_8_1/trace/trace-test.js,v  <--  trace-test.js
new revision: 1.14; previous revision: 1.13

/cvsroot/mozilla/js/tests/shell.js,v  <--  shell.js
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: