Bug 486578 - TM: "Assertion failure: scope->object == pobj" with function, __proto__, length.  r=gal